--- a/.config/i3/config
+++ b/.config/i3/config
@@ -102,7 +102,7 @@ bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
 
 # focus the child container
-bindsym $mod+d focus child
+#bindsym $mod+c focus child
 
 # switch to workspace
 bindsym $mod+1 workspace 1
@@ -116,8 +116,6 @@ bindsym $mod+8 workspace 8
 bindsym $mod+9 workspace 9
 bindsym $mod+0 workspace 10
 
-# jump to last active workspace
-bindsym $mod+Tab  workspace back_and_forth
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace 1
@@ -174,17 +172,20 @@ bar {
 exec xinput --disable "FocalTechPS/2 FocalTech Touchpad"
 
 # Enable numlock on i3 boot
-exec_always --no-startup-id numlockx onr
+exec_always --no-startup-id numlockx on
 
 # Cycle through active workspaces
-bindsym $mod+Tab workspace next
+#bindsym $mod+Tab workspace next
 bindsym $mod+Shift+Tab workspace prev
 
+# jump to last active workspace
+bindsym $mod+Tab  workspace back_and_forth
+
 # open specific apps in specific workspaces
-exec --no-startup-id i3-msg 'workspace 9; exec /usr/bin/firefox; sleep 3'
-exec --no-startup-id i3-msg 'workspace 10; exec /usr/bin/google-chrome; sleep 3'
-exec --no-startup-id i3-msg 'workspace 5; exec /usr/bin/dolphin; sleep 3'
-exec --no-startup-id i3-msg 'workspace 7; exec /usr/bin/code; sleep 3'
+exec --no-startup-id i3-msg 'workspace 9; exec /usr/bin/brave-browser';
+exec --no-startup-id i3-msg 'workspace 10; exec /usr/bin/google-chrome';
+exec --no-startup-id i3-msg 'workspace 5; exec /usr/bin/dolphin';
+exec --no-startup-id i3-msg 'workspace 7; exec /usr/bin/code';
 
 # Volume control through keyboard
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
